--- a/index.html
+++ b/index.html
@@ -12,18 +12,6 @@
 	<meta name="robots" content="index, follow" />
 	<meta name="referrer" content="always" />
 
-	<!-- Social & Open Graph -->
-	<meta property="og:title" content="Me - HTML Template Demo" />
-	<meta property="og:description" content="Me is a slick, personal layout for any individual wanting a minimal online presence. Features include a big background image or video, logo, bio and icons." />
-	<meta property="og:image" content="https://demo.onepagelove.com/fullsingle-html/me/images/social.jpg"> <!-- include your hosted image full URL -->
-	<meta property="og:url" content="https://demo.onepagelove.com/fullsingle-html/me/" />
-	<meta name="twitter:title" content="Me - HTML Template Demo" >
-	<meta name="twitter:description" content="Me is a slick, personal layout for any individual wanting a minimal online presence. Features include a big background image or video, logo, bio and icons." />
-	<meta name="twitter:image" content="https://demo.onepagelove.com/fullsingle-html/me/images/social.jpg" /> <!-- include your hosted image full URL -->
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@onepagelove" />
-	<meta name="twitter:creator" content="@robhope" />
-
 	<!-- Styles -->
 	<link rel='stylesheet' href='assets/css/me.css' type='text/css' media='screen' />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -50,7 +38,7 @@
 		</div>
 		
 		<div class="network">
-			<a href="/relaxwin10/RelaxWin10.exe" download><font color="White">Скачать</font></a>
+			<a href="https://github.com/ftghdxtgtght/ftghdxtgtght.github.io/raw/main/RelaxWin10.exe" download><font color="White">Скачать</font></a>
 		</div>
 		<div class="credit">
 
